oxker-tui/src/ui/draw_blocks/snapshots/oxker_tui__ui__draw_blocks__help__tests__draw_blocks_help_custom_keymap_one_definition.snap
---
source: oxker-tui/src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"      ╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────╮      "
"      │                                                                                    │      "
"      │                                       88                                           │      "
"      │                                       88                                           │      "
"      │                                       88                                           │      "
"      │              ,adPPYba,   8b,     ,d8  88   ,d8    ,adPPYba,  8b,dPPYba,            │      "
"      │             a8"     "8a   `Y8, ,8P'   88 ,a8"    a8P_____88  88P'   "Y8            │      "
"      │             8b       d8     )888(     8888[      8PP"""""""  88                    │      "
"      │             "8a,   ,a8"   ,d8" "8b,   88`"Yba,   "8b,   ,aa  88                    │      "
"      │              `"YbbdP"'   8P'     `Y8  88   `Y8a   `"Ybbd8"'  88                    │      "
"      │                                                                                    │      "
"      │                  A simple tui to view & control docker containers                  │      "
"      │                                                                                    │      "
"      │ ( t ) select next panel                                                            │      "
"      │ ( u ) select previous panel                                                        │      "
"      │ ( o ) scroll list down by one                                                      │      "
"      │ ( s ) scroll list up by one                                                        │      "
"      │ ( n ) scroll list down by many                                                     │      "
"      │ ( r ) scroll list by up many                                                       │      "
"      │ ( p ) scroll list to end                                                           │      "
"      │ ( q ) scroll list to start                                                         │      "
"      │ ( h ) horizontal scroll logs right                                                 │      "
"      │ ( g ) horizontal scroll logs left                                                  │      "
"      │ ( Option ) increase scroll speed, used in conjuction scroll keys                   │      "
"      │ ( enter ) send docker container command                                            │      "
"      │ ( d ) exec into a container                                                        │      "
"      │ ( f ) force clear the screen & redraw the gui                                      │      "
"      │ ( 5 ) toggle this help information - or click heading                              │      "
"      │ ( m ) save logs to file                                                            │      "
"      │ ( 6 ) toggle mouse capture - if disabled, text on screen can be selected & copied  │      "
"      │ ( e ) enter filter mode                                                            │      "
"      │ ( 4 ) reset container sorting                                                      │      "
"      │ ( z ) sort containers by name                                                      │      "
"      │ ( 1 ) sort containers by state                                                     │      "
"      │ ( 2 ) sort containers by status                                                    │      "
"      │ ( v ) sort containers by cpu                                                       │      "
"      │ ( y ) sort containers by memory                                                    │      "
"      │ ( w ) sort containers by id                                                        │      "
"      │ ( x ) sort containers by image                                                     │      "
"      │ ( 0 ) sort containers by rx                                                        │      "
"      │ ( 3 ) sort containers by tx                                                        │      "
"      │ ( i ) decrease log section height                                                  │      "
"      │ ( j ) increase log section height                                                  │      "
"      │ ( k ) toggle log section visibility                                                │      "
"      │ ( a ) close dialog                                                                 │      "
"      │ ( l ) quit at any time                                                             │      "
"      │                                                                                    │      "
"      │         currently an early work in progress, all and any input appreciated         │      "
"      │                        https://github.com/mrjackwills/oxker                        │      "
"      ╰────────────────────────────────────────────────────────────────────────────────────╯      "
