oxker-tui/src/ui/draw_blocks/snapshots/oxker_tui__ui__draw_blocks__help__tests__draw_blocks_help_one_and_two_definitions.snap
---
source: oxker-tui/src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"        ╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────────────╮        "
"        │                                                                                            │        "
"        │                                           88                                               │        "
"        │                                           88                                               │        "
"        │                                           88                                               │        "
"        │                  ,adPPYba,   8b,     ,d8  88   ,d8    ,adPPYba,  8b,dPPYba,                │        "
"        │                 a8"     "8a   `Y8, ,8P'   88 ,a8"    a8P_____88  88P'   "Y8                │        "
"        │                 8b       d8     )888(     8888[      8PP"""""""  88                        │        "
"        │                 "8a,   ,a8"   ,d8" "8b,   88`"Yba,   "8b,   ,aa  88                        │        "
"        │                  `"YbbdP"'   8P'     `Y8  88   `Y8a   `"Ybbd8"'  88                        │        "
"        │                                                                                            │        "
"        │                      A simple tui to view & control docker containers                      │        "
"        │                                                                                            │        "
"        │ ( t ) select next panel                                                                    │        "
"        │ ( u ) or ( U ) select previous panel                                                       │        "
"        │ ( o ) or ( O ) scroll list down by one                                                     │        "
"        │ ( s ) or ( S ) scroll list up by one                                                       │        "
"        │ ( n ) scroll list down by many                                                             │        "
"        │ ( r ) scroll list by up many                                                               │        "
"        │ ( p ) scroll list to end                                                                   │        "
"        │ ( q ) or ( Q ) scroll list to start                                                        │        "
"        │ ( h ) horizontal scroll logs right                                                         │        "
"        │ ( g ) or ( G ) horizontal scroll logs left                                                 │        "
"        │ ( Option ) increase scroll speed, used in conjuction scroll keys                           │        "
"        │ ( enter ) send docker container command                                                    │        "
"        │ ( d ) exec into a container                                                                │        "
"        │ ( f ) force clear the screen & redraw the gui                                              │        "
"        │ ( 5 ) toggle this help information - or click heading                                      │        "
"        │ ( m ) or ( M ) save logs to file                                                           │        "
"        │ ( 6 ) or ( 7 ) toggle mouse capture - if disabled, text on screen can be selected & copied │        "
"        │ ( e ) or ( E ) enter filter mode                                                           │        "
"        │ ( 4 ) or ( 5 ) reset container sorting                                                     │        "
"        │ ( z ) sort containers by name                                                              │        "
"        │ ( 1 ) sort containers by state                                                             │        "
"        │ ( 2 ) or ( 7 ) sort containers by status                                                   │        "
"        │ ( v ) sort containers by cpu                                                               │        "
"        │ ( y ) or ( Y ) sort containers by memory                                                   │        "
"        │ ( w ) or ( W ) sort containers by id                                                       │        "
"        │ ( x ) sort containers by image                                                             │        "
"        │ ( 0 ) or ( 9 ) sort containers by rx                                                       │        "
"        │ ( 3 ) sort containers by tx                                                                │        "
"        │ ( i ) or ( I ) decrease log section height                                                 │        "
"        │ ( j ) increase log section height                                                          │        "
"        │ ( k ) or ( K ) toggle log section visibility                                               │        "
"        │ ( a ) or ( A ) close dialog                                                                │        "
"        │ ( l ) quit at any time                                                                     │        "
"        │                                                                                            │        "
"        │             currently an early work in progress, all and any input appreciated             │        "
"        │                            https://github.com/mrjackwills/oxker                            │        "
"        ╰────────────────────────────────────────────────────────────────────────────────────────────╯        "
